Ajustes proyecto y publish 4

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,21 +1,21 @@
   		 <title>Soporte celuweb</title>
   		<!-- Bootstrap core CSS-->
-        <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <!-- Custom fonts for this template-->
-        <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <!--teste-->
 
         <!--marquet js-->
-        <script src="assets/js/marquetIndex.js" type="text/javascript"></script>
+        <script src="../assets/js/marquetIndex.js" type="text/javascript"></script>
         <!-- Custom styles for this template-->
-        <link href="assets/css/sb-admin.css" rel="stylesheet">
+        <link href="../assets/css/sb-admin.css" rel="stylesheet">
         <!--angular--> 
-        <script src="Dependecias/bower_components/angular/angular.min.js" type="text/javascript"></script>
+        <script src="../Dependecias/bower_components/angular/angular.min.js" type="text/javascript"></script>
         <!--angular route-->  
-        <script src="Dependecias/bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
+        <script src="../Dependecias/bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
         <!--master page-->
-        <script src="js/app.js" type="text/javascript"></script>
+        <script src="../js/app.js" type="text/javascript"></script>
         <!--controladores-->
-        <script src="controllers/logIn/logInCtl.js" type="text/javascript"></script>
+        <script src="../controllers/logIn/logInCtl.js" type="text/javascript"></script>
         <!--servicios-->
-        <script src="controllers/logIn/logInSer.js" type="text/javascript"></script>
+        <script src="../controllers/logIn/logInSer.js" type="text/javascript"></script>
