--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <% include ../partials/header.ejs %>
+  <title>Soporte celuweb</title>
+        <!-- Bootstrap core CSS-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!-- Custom fonts for this template-->
+        <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <!--teste-->
+
+        <!--marquet js-->
+        <script src="../assets/js/marquetIndex.js" type="text/javascript"></script>
+        <!-- Custom styles for this template-->
+        <link href="../assets/css/sb-admin.css" rel="stylesheet">
+        <!--angular--> 
+        <script src="../Dependecias/bower_components/angular/angular.min.js" type="text/javascript"></script>
+        <!--angular route-->  
+        <script src="../Dependecias/bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
+        <!--master page-->
+        <script src="../js/app.js" type="text/javascript"></script>
+        <!--controladores-->
+        <script src="../controllers/logIn/logInCtl.js" type="text/javascript"></script>
+        <!--servicios-->
+        <script src="../controllers/logIn/logInSer.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -46,7 +67,7 @@
         </div>
  
 </div>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
 </html>
