--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,10 +3,11 @@
 <head>
   <title>Soporte celuweb</title>
         <!-- Bootstrap core CSS-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- Custom fonts for this template-->
-        <link href="../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <!--teste-->
+        <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+        <!--jquery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!--js bootstrap-->
+        <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
         <!--marquet js-->
         <script src="../assets/js/marquetIndex.js" type="text/javascript"></script>
@@ -24,7 +25,9 @@
         <script src="../controllers/logIn/logInSer.js" type="text/javascript"></script>
 
 </head>
-
+<% include ../js/app.ejs %>
+<% include ../controllers/logIn/logInCtl.ejs %>
+<% include ../controllers/logIn/logInSer.ejs %>
 <body>
 <div class="container">
      <div class="container">
@@ -67,7 +70,6 @@
         </div>
  
 </div>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
 </html>
