--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,21 +8,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <!--js bootstrap-->
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-        <!--marquet js-->
-        <script src="../assets/js/marquetIndex.js" type="text/javascript"></script>
-        <!-- Custom styles for this template-->
-        <link href="../assets/css/sb-admin.css" rel="stylesheet">
-        <!--angular--> 
-        <script src="../Dependecias/bower_components/angular/angular.min.js" type="text/javascript"></script>
-        <!--angular route-->  
-        <script src="../Dependecias/bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
-        <!--master page-->
-        <script src="../js/app.js" type="text/javascript"></script>
-        <!--controladores-->
-        <script src="../controllers/logIn/logInCtl.js" type="text/javascript"></script>
-        <!--servicios-->
-        <script src="../controllers/logIn/logInSer.js" type="text/javascript"></script>
+        <!--angular route-->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 
 </head>
 <% include ../js/app.ejs %>
